--- a/isli-ra/src/assets/i18n/zh-cn.json
+++ b/isli-ra/src/assets/i18n/zh-cn.json
@@ -1253,6 +1253,11 @@
         "sort": "排序不能为空",
         "title": "標題不能为空"
       }
+    },
+    "webInfo": {
+      "valid": {
+        "url": "链接/地址格式不正确"
+      }
     }
   },
   "statistic": {
